<resources>
    <string name="app_name">Apni Duniya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="CNN">CNN</string>
    <string name="Aljazeera">Aljazeera</string>
    <string name="Aaj_tak">Aaj Tak</string>
    <string name="NDTV">NDTV</string>
    <string name="IndiaTV">India Tv</string>
    <string name="New_York_Times">New York Times</string>
    <string name="ABP">ABP</string>
    <string name="Zee_News">Zee News</string>
    <string name="India_Today">India Today</string>
    <string name="Times_Now">Times Now</string>
    <string name="News_18">News 18</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose_category">ChooseCategory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>